k8s/aadupuli.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aadupuli
---
kind: Service
apiVersion: v1
metadata:
  name: aadupuli
  namespace: aadupuli
  labels:
    app: aadupuli
spec:
  type: ClusterIP
  selector:
    app: aadupuli
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aadupuli
  namespace: aadupuli
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /aadupuli/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aadupuli
                port:
                  number: 8080
          - path: /aadupuli(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aadupuli-ui
                port:
                  number: 80
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: aadupuli
  namespace: aadupuli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aadupuli
  template:
    metadata:
      labels:
        app: aadupuli
    spec:
      containers:
        - image: arundeva/aadupuli:0.6.0
          imagePullPolicy: IfNotPresent
          name: aadupuli
          ports:
            - containerPort: 8080
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: aadupuli-ui
  namespace: aadupuli
  labels:
    app: aadupuli-ui
spec:
  type: ClusterIP
  selector:
    app: aadupuli-ui
  ports:
    - port: 80
      targetPort: 80
      name: http
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: aadupuli-ui
  namespace: aadupuli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aadupuli-ui
  template:
    metadata:
      labels:
        app: aadupuli-ui
    spec:
      containers:
        - image: arundeva/aadu-puli-react:0.6.0
          imagePullPolicy: IfNotPresent
          name: aadupuli-ui
          ports:
            - containerPort: 80
              protocol: TCP
