k8s/landing-page.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing-page
---
kind: Service
apiVersion: v1
metadata:
  name: landing-page
  namespace: landing-page
  labels:
    app: landing-page
spec:
  type: ClusterIP
  selector:
    app: landing-page
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: landing-page
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: landing-page
                port:
                  number: 80
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: landing-page
  namespace: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - image: arundeva/singam-nginx:1.0.2
          imagePullPolicy: IfNotPresent
          name: landing-page
          ports:
            - containerPort: 80
              protocol: TCP
